# voice_assistant

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
src/: agent.py  cli.py  config.py  interfaces.py  llm.py  main.py  spotify_client.py
